Add cors config for vercel